--- a/views/home.slim
+++ b/views/home.slim
@@ -9,6 +9,7 @@ html
         div class="cover-container d-flex h-100 p-3 mx-auto flex-column"
             == slim :"partials/global_nav", locals: {pageindex: 0}
             main role="main" class="inner cover"
-                h1 class="cover-heading" Welcome to my site :)
+                img src="https://storage.googleapis.com/spozderwebsite/static/me_400x400.jpg" alt="Me!" id="avatar"
+                h2 class="cover-heading" Welcome to my site :)
                 p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out for more information!
             == slim :"partials/global_footer"
