--- a/views/resume.slim
+++ b/views/resume.slim
@@ -8,7 +8,5 @@ html
     body class="text-center"
         div class="cover-container d-flex h-100 p-3 mx-auto flex-column"
             == slim :"partials/global_nav", locals: {pageindex: 2}
-            main role="main" class="inner cover"
-                h1 class="cover-heading" Welcome to my site :)
-                p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out for more information!
+            iframe src="https://storage.googleapis.com/spozderwebsite/static/SpencerPozder.pdf" width="auto" height="auto" id="resumeIframe"
             == slim :"partials/global_footer"
