--- a/views/stylesheets/main_stylesheet.sass
+++ b/views/stylesheets/main_stylesheet.sass
@@ -106,3 +106,14 @@ body
  */
 .mastfoot
     color: rgba(255, 255, 255, .5)
+
+/*
+ * Specific styles
+ */
+#avatar
+    border-radius: 50%
+    max-width: 30vw
+
+#resumeIframe
+    height: 100%
+    width: 100%
