--- a/views/stylesheets/main_stylesheet.sass
+++ b/views/stylesheets/main_stylesheet.sass
@@ -27,6 +27,7 @@ html,
 body
     height: 100%
     background-color: #333
+    overflow: auto // To make box-shadow maintain during scroll
 
 
 body
@@ -116,4 +117,13 @@ body
 
 #resumeIframe
     height: 100%
+    width: 100%
+
+.project
+    .col-md
+        margin-bottom: 20px
+    .row
+        margin-top: 20px
+
+.projectimage
     width: 100%
