--- a/views/partials/global_nav.slim
+++ b/views/partials/global_nav.slim
@@ -1,6 +1,7 @@
 header class="masthead mb-auto"
     .inner
-        h3 class="masthead-brand" Spencer Pozder
+        a href="/"
+            h3 class="masthead-brand" Spencer Pozder
         nav class="nav nav-masthead justify-content-center"
             a class=(pageindex == 0 ? "nav-link active" : "nav-link") href="/" Home
             a class=(pageindex == 1 ? "nav-link active" : "nav-link") href="/projects" Projects
