--- a/views/projects.slim
+++ b/views/projects.slim
@@ -8,7 +8,33 @@ html
     body class="text-center"
         div class="cover-container d-flex h-100 p-3 mx-auto flex-column"
             == slim :"partials/global_nav", locals: {pageindex: 1}
-            main role="main" class="inner cover"
-                h1 class="cover-heading" Welcome to my site :)
-                p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out for more information!
+            main role="main" class="inner cover project"
+                .row
+                    .col-md
+                        a href="/countdown"
+                            img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/countdown.gif"
+                    .col-md
+                        a href="/countdown"
+                            h3 HTML/CSS/JS Countdown
+                        p A quick countdown creation/display page I created for sending anyone a countdown with a message that displays at a certain time/day. Feel free to try it out!
+                .row
+                    .col-md
+                        img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/fakenews.png"
+                    .col-md
+                        h3 Fake News Detector
+                        p A Chrome extension using a Convolutional Neural Netowrk to detect fake news online and portraying the indicative words/phrases in the text. For my EECE 5642 Data Visualization final project. TODO: Link to Github, add presentation to Github.
+                .row
+                    .col-md
+                        a href="https://github.com/Spozder/LaneDetectionNNProject"
+                            img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/lanedetector.png"
+                    .col-md
+                        a href="https://github.com/Spozder/LaneDetectionNNProject"
+                            h3 Lane Detection CNN/RNN
+                        p Lane detector created using a Convolutional/Recurrent Neural Network Combination. For my EECE 5644 Machine Learning final project.
+                .row
+                    .col-md
+                        img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/emotion.png"
+                    .col-md
+                        h3 Emotion Classifier
+                        p An emotion detector Neural Network capable of classifing human emotions in images/videos. Created for my Computer Engineering capstone project. TODO: Web version????
             == slim :"partials/global_footer"
