Finished up projects page, udpated intro page

--- a/views/contact.slim
+++ b/views/contact.slim
@@ -25,7 +25,8 @@ html
                             p LinkedIn.com/in/Spozder
                     .col-sm
                         i class="fas fa-phone fa-2x"
-                        p
-                            | (303) 898-9835
+                        a href="tel:303-898-9835"
+                            p
+                                | (303) 898-9835
                         
             == slim :"partials/global_footer"
