--- a/views/home.slim
+++ b/views/home.slim
@@ -10,6 +10,6 @@ html
             == slim :"partials/global_nav", locals: {pageindex: 0}
             main role="main" class="inner cover"
                 img src="https://storage.googleapis.com/spozderwebsite/static/me_400x400.jpg" alt="Me!" id="avatar"
-                h2 class="cover-heading" Welcome to my site :)
-                p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out for more information!
+                h2 class="cover-heading" Welcome!
+                p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out if you'd like to get in touch.
             == slim :"partials/global_footer"
