--- a/views/projects.slim
+++ b/views/projects.slim
@@ -19,10 +19,12 @@ html
                         p A quick countdown creation/display page I created for sending anyone a countdown with a message that displays at a certain time/day. Feel free to try it out!
                 .row
                     .col-md
-                        img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/fakenews.png"
+                        a href="https://github.com/Spozder/FakeNewsDetector"
+                            img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/fakenews.png"
                     .col-md
-                        h3 Fake News Detector
-                        p A Chrome extension using a Convolutional Neural Netowrk to detect fake news online and portraying the indicative words/phrases in the text. For my EECE 5642 Data Visualization final project. TODO: Link to Github, add presentation to Github.
+                        a href="https://github.com/Spozder/FakeNewsDetector"
+                            h3 Fake News Detector
+                        p A Chrome extension using a Convolutional Neural Netowrk to detect fake news online and portraying the indicative words/phrases in the text. For my EECE 5642 Data Visualization final project.
                 .row
                     .col-md
                         a href="https://github.com/Spozder/LaneDetectionNNProject"
@@ -36,5 +38,5 @@ html
                         img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/emotion.png"
                     .col-md
                         h3 Emotion Classifier
-                        p An emotion detector Neural Network capable of classifing human emotions in images/videos. Created for my Computer Engineering capstone project. TODO: Web version????
+                        p An emotion detector Neural Network capable of classifing human emotions in images/videos. Created for my Computer Engineering capstone project.
             == slim :"partials/global_footer"
