--- a/views/create_countdown.slim
+++ b/views/create_countdown.slim
@@ -17,7 +17,7 @@ html
                 form id="makeCountdownForm" onsubmit="return submitForm()"
                     .form-row
                         label for="inputMessage" class="col-sm-4 col-form-label" Countdown Message
-                        div class="form-group col-sm-8"
+                        .form-group.col-sm-8
                             input id="inputMessage" type="text" name="message" class="form-control" placeholder="Message to display when countdown ends :)"
                     .form-row
                         label for="inputDatetime" class="col-sm-4 col-form-label" Date and Time
@@ -28,9 +28,9 @@ html
                                 div class="input-group date" id="datetimepicker1" data-target-input="nearest"
                                     input id="inputDatetime" type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1" name="datetime"
                                     div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker"
-                                        div class="input-group-text"
+                                        .input-group-text
                                             i class="fa fa-calendar"
-                    div class="form-row justify-content-center"
+                    .form-row.justify-content-center
                         input type="submit" value="Submit" class="btn btn-primary m-1"
                         input type="reset" class="btn btn-secondary m-1"
 
