--- a/views/projects.slim
+++ b/views/projects.slim
@@ -24,7 +24,7 @@ html
                     .col-md
                         a href="https://github.com/Spozder/FakeNewsDetector"
                             h3 Fake News Detector
-                        p A Chrome extension using a Convolutional Neural Netowrk to detect fake news online and portraying the indicative words/phrases in the text. For my EECE 5642 Data Visualization final project.
+                        p A Chrome extension using a Convolutional Neural Network to detect fake news online and portraying the indicative words/phrases in the text. For my EECE 5642 Data Visualization final project.
                 .row
                     .col-md
                         a href="https://github.com/Spozder/LaneDetectionNNProject"
