Prettier main sass file, added description meta tag, added nav bottom margin, changed project order

--- a/views/partials/global_header.slim
+++ b/views/partials/global_header.slim
@@ -1,4 +1,5 @@
 meta name="author" content="Spencer Pozder"
+meta name="description" content="Portfolio Website for Spencer Pozder"
 meta charset="utf-8"
 meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
 link rel="icon" type="image/png" href="icons8-home-48.png"
