--- a/views/stylesheets/main_stylesheet.sass
+++ b/views/stylesheets/main_stylesheet.sass
@@ -1,14 +1,12 @@
-/*
- * Globals
- */
+// Main Stylesheet for website
 
-/* Links */
+// Links
 a,
 a:focus,
 a:hover
     color: #fff
 
-/* Custom default button */
+// Custom default button
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus
@@ -17,18 +15,12 @@ a:hover
     background-color: #fff
     border: .05rem solid #fff
 
-
-
-/*
- * Base structure
- */
-
+// Base structure
 html,
 body
     height: 100%
     background-color: #333
     overflow: auto // To make box-shadow maintain during scroll
-
 
 body
     display: -ms-flexbox
@@ -41,22 +33,15 @@ body
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5)
     box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5)
 
-
 .cover-container
     width: 42em
 
-
-
-/*
- * Header
- */
+// Header
 .masthead
     margin-bottom: 2rem
 
-
 .masthead-brand
-    margin-bottom: 0
-
+    margin-bottom: 2rem
 
 .nav-masthead .nav-link
     padding: .25rem 0
@@ -65,20 +50,16 @@ body
     background-color: transparent
     border-bottom: .25rem solid transparent
 
-
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus
     border-bottom-color: rgba(255, 255, 255, .25)
 
-
 .nav-masthead .nav-link + .nav-link
     margin-left: 1rem
-
 
 .nav-masthead .active
     color: #fff
     border-bottom-color: #fff
-
 
 @media (min-width: 48em)
     .masthead-brand
@@ -87,12 +68,7 @@ body
     .nav-masthead
         float: right
 
-
-
-
-/*
- * Cover
- */
+// Cover
 .cover
     padding: 0 1.5rem
 
@@ -100,17 +76,11 @@ body
     padding: .75rem 1.25rem
     font-weight: 700
 
-
-
-/*
- * Footer
- */
+// Footer
 .mastfoot
     color: rgba(255, 255, 255, .5)
 
-/*
- * Specific styles
- */
+// Specific styles
 #avatar
     border-radius: 50%
     max-width: 30vw
