--- a/views/projects.slim
+++ b/views/projects.slim
@@ -11,6 +11,14 @@ html
             main role="main" class="inner cover project"
                 .row
                     .col-md
+                        a href="https://swampyboston.com/"
+                            img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/swampyboston.png"
+                    .col-md
+                        a href="https://swampyboston.com/"
+                            h3 Swampy Boston
+                        p An educational website for learning about the history of land creation in Boston.
+                .row
+                    .col-md
                         a href="https://github.com/Spozder/FakeNewsDetector"
                             img.projectimage src="https://storage.googleapis.com/spozderwebsite/static/projects/fakenews.png"
                     .col-md
