--- a/views/home.slim
+++ b/views/home.slim
@@ -11,5 +11,8 @@ html
             main role="main" class="inner cover"
                 img src="https://storage.googleapis.com/spozderwebsite/static/me_400x400.jpg" alt="Me!" id="avatar"
                 h2 class="cover-heading" Welcome!
-                p class="lead" I am a software developer in the Boston area looking for work in New York City following my graduation in May 2020. Feel free to reach out if you'd like to get in touch.
+                p class="lead"
+                    ' I am a Senior Software Engineer at 
+                    a href="https://www.panoramaed.com/"Panorama Education
+                    ' , and am currently located in the Boston area. Please reach out if you'd like to get in touch!
             == slim :"partials/global_footer"
